--- a/views/partials/welcome_panel.html
+++ b/views/partials/welcome_panel.html
@@ -4,7 +4,6 @@
     <a href="#" class="toppanel-logo">
       <img src="{{static}}/images/dave.min.svg" alt="Welcome to JS Bin">
     </a>
-
     <div class="toppanel-actions{{#unless home}} toppanel-actions-alone{{/unless}}">
       <div>
         <a id="createnew" href="{{root}}" class="toppanel-button">New bin</a>
@@ -16,105 +15,86 @@
       </div>
     </div>
   </div>
-  {{#welcomePanel}}
-  {{#features}}
+{{#welcomePanel}}
+{{#features}}
   <div class="toppanel-column">
-    <div><label id="enableUniversalEditorLabel" for="enableUniversalEditor"><input type="checkbox"
-                                                                                   id="enableUniversalEditor">Textarea
-      editor mode</label></div>
-    <h2 class="toppanel-title"><a href="{{link}}" {{#if ext}} target="_blank" {{/if}}
-      class="toppanel-link">{{title}}</a></h2>
-    <ul class="toppanel-list">
-      {{#data}}{{#.}}
-      <li><a href="{{link}}" {{#if ext}} target="_blank" {{/if}} class="toppanel-link">{{title}}</a></li>
-      {{/.}}{{/data}}
-    </ul>
+    <div><label id="enableUniversalEditorLabel" for="enableUniversalEditor"><input type="checkbox" id="enableUniversalEditor">Textarea editor mode</label></div>
+    <h2 class="toppanel-title"><a href="{{link}}"{{#if ext}} target="_blank"{{/if}} class="toppanel-link">{{title}}</a></h2>
+      <ul class="toppanel-list">
+      {{#data}}{{#.}}<li><a href="{{link}}"{{#if ext}} target="_blank"{{/if}} class="toppanel-link">{{title}}</a></li>{{/.}}{{/data}}
+      </ul>
   </div>
-  {{/features}}
+{{/features}}
 
-  {{#pro-features}}
+{{#pro-features}}
   <div class="toppanel-column">
-    <h2 class="toppanel-title"><a href="{{#if ../../user.pro}}/help/pro{{else}}/upgrade{{/if}}" class="toppanel-link">{{title}}</a>
-    </h2>
-    <ul class="toppanel-list">
-      {{#data}}{{#.}}
-      <li><a href="{{link}}" {{#if ext}} target="_blank" {{/if}} class="toppanel-link">{{title}}</a></li>
-      {{/.}}{{/data}}
-    </ul>
-    {{#unless ../../user.pro}}
-    <div class="toppanel-section toppanel-love toppanel-no-pro">
-      <center><a href="/upgrade">Upgrade to pro now</a></center>
-    </div>
-    {{/unless}}
+    <h2 class="toppanel-title"><a href="{{#if ../../user.pro}}/help/pro{{else}}/upgrade{{/if}}" class="toppanel-link">{{title}}</a></h2>
+      <ul class="toppanel-list">
+      {{#data}}{{#.}}<li><a href="{{link}}"{{#if ext}} target="_blank"{{/if}} class="toppanel-link">{{title}}</a></li>{{/.}}{{/data}}
+      </ul>
+  {{#unless ../../user.pro}}
+  <div class="toppanel-section toppanel-love toppanel-no-pro">
+    <center><a href="/upgrade">Upgrade to pro now</a></center>
   </div>
-  {{/pro-features}}
+  {{/unless}}
+  </div>
+{{/pro-features}}
 
   <div class="toppanel-column toppanel-stretch">
-    {{#blog}}
+  {{#blog}}
     <div class="toppanel-blog toppanel-section">
-      <h2 class="toppanel-title"><a href="{{link}}" {{#if ext}} target="_blank" {{/if}}
-        class="toppanel-link">{{title}}</a></h2>
-      <ul class="toppanel-list">
-        {{#data}}{{#.}}
-        <li><a href="{{link}}" {{#if ext}} target="_blank" {{/if}} class="toppanel-link">{{title}}</a></li>
-        {{/.}}{{/data}}
-      </ul>
+      <h2 class="toppanel-title"><a href="{{link}}"{{#if ext}} target="_blank"{{/if}} class="toppanel-link">{{title}}</a></h2>
+        <ul class="toppanel-list">
+        {{#data}}{{#.}}<li><a href="{{link}}"{{#if ext}} target="_blank"{{/if}} class="toppanel-link">{{title}}</a></li>{{/.}}{{/data}}
+        </ul>
     </div>
-    {{/blog}}
-    {{#help}}
+  {{/blog}}
+  {{#help}}
     <div class="toppanel-help toppanel-section">
-      <h2 class="toppanel-title"><a href="{{link}}" {{#if ext}} target="_blank" {{/if}}
-        class="toppanel-link">{{title}}</a></h2>
-      <ul class="toppanel-list">
-        {{#data}}{{#.}}
-        <li><a href="{{link}}" {{#if ext}} target="_blank" {{/if}} class="toppanel-link">{{title}}</a></li>
-        {{/.}}{{/data}}
-      </ul>
+      <h2 class="toppanel-title"><a href="{{link}}"{{#if ext}} target="_blank"{{/if}} class="toppanel-link">{{title}}</a></h2>
+        <ul class="toppanel-list">
+        {{#data}}{{#.}}<li><a href="{{link}}"{{#if ext}} target="_blank"{{/if}} class="toppanel-link">{{title}}</a></li>{{/.}}{{/data}}
+        </ul>
     </div>
-    {{/help}}
+  {{/help}}
   </div>
 
   <div class="toppanel-column">
     {{#twitter}}
-    <div class="toppanel-section">
-      <h2 class="toppanel-title"><a href="{{link}}" target="_blank" class="toppanel-link">{{title}}</a></h2>
-      <ul class="toppanel-list">
-        {{#data}}
-        {{#.}}
-        <li>&ldquo;{{{title}}}&rdquo; &mdash; <a href="{{link}}" target="_blank"
-                                                 class="toppanel-link toppanel-twitter-link">@js_bin</a></li>
-        {{/.}}
-        {{/data}}
-      </ul>
-    </div>
+      <div class="toppanel-section">
+        <h2 class="toppanel-title"><a href="{{link}}" target="_blank" class="toppanel-link">{{title}}</a></h2>
+          <ul class="toppanel-list">
+          {{#data}}
+            {{#.}}
+              <li>&ldquo;{{{title}}}&rdquo; &mdash; <a href="{{link}}" target="_blank" class="toppanel-link toppanel-twitter-link">@js_bin</a></li>
+            {{/.}}
+          {{/data}}
+          </ul>
+      </div>
     {{/twitter}}
     <div class="toppanel-section toppanel-love haspro">
-      <p><a target="_blank" href="http://jsbin.com/dave/last/edit">Dave</a> loves you <span class="love">&hearts;</span>
-        because you're a Pro.</p>
+      <p><a target="_blank" href="http://jsbin.com/dave/last/edit">Dave</a> loves you <span class="love">&hearts;</span> because you're a Pro.</p>
     </div>
   </div>
 
   <div class="toppanel-column">
-    {{#quote}}
+  {{#quote}}
     <div class="toppanel-section">
       <div class="toppanel-quote">{{{.}}}</div>
     </div>
-    {{/quote}}
+  {{/quote}}
     {{!--
-    <div class="toppanel-section">
-      <h2 class="toppanel-title"><a href="#">Recent bins</a></h2>
-      <ul class="toppanel-list">
-        <li><a href="#"><span class="toppanel-bin-name">sdcwww</span> <span
-          class="toppanel-bin-date">yesterday</span></a></li>
-        <li><a href="#"><span class="toppanel-bin-name">uhsjj</span> <span
-          class="toppanel-bin-date">last Wednesday</span></a></li>
-        <li><a href="#"><span class="toppanel-bin-name">jiooo</span> <span class="toppanel-bin-date">2 weeks ago</span></a>
-        </li>
-      </ul>
-    </div>
+      <div class="toppanel-section">
+        <h2 class="toppanel-title"><a href="#">Recent bins</a></h2>
+        <ul class="toppanel-list">
+          <li><a href="#"><span class="toppanel-bin-name">sdcwww</span> <span class="toppanel-bin-date">yesterday</span></a></li>
+          <li><a href="#"><span class="toppanel-bin-name">uhsjj</span> <span class="toppanel-bin-date">last Wednesday</span></a></li>
+          <li><a href="#"><span class="toppanel-bin-name">jiooo</span> <span class="toppanel-bin-date">2 weeks ago</span></a></li>
+        </ul>
+      </div>
     --}}
   </div>
-  {{/welcomePanel}}
+{{/welcomePanel}}
 </div>
 
 <script>
