--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5833,6 +5833,7 @@ a.toppanel-logo {
   margin: 0;
   padding: 0.2em 0.2em 0.2em 1em;
   width: auto;
+  display:none !important;
 }
 
 [open] .console-log-head {
